# safetycage-tutorials

./: .gitignore  README.md  prev_pyproject.toml  pyproject.toml  requirements.txt
cifar10/: mahalanobis.py  mahalanobis_tutorial.ipynb  spardacus_tutorial.ipynb
cifar10/modules/: cnn.py  keras_cifar10_datamodule.py  keras_modelmodule.py
cifar10/results/: metrics_test.json
cifar10/train_model/: main.py
components/: doctor.py  mahalanobis.py  msp.py  spardacus.py
iris/: msp_tutorial.ipynb
iris/modules/: sklearn_iris_datamodule.py  sklearn_iris_modelmodule.py
iris/results/: metrics_test.json
iris/train_model/: main.py
mnist/: doctor_tutorial.ipynb  msp.py  msp_tutorial.ipynb  spardacus_tutorial.ipynb
mnist/modules/: keras_mnist_datamodule.py  keras_modelmodule.py  mlp.py
mnist/results/: metrics_test.json
mnist/train_model/: main.py  trainer.py
use_case/notebooks/cifar10/: doctor_tutorial.ipynb  mahalanobis_tutorial.ipynb  msp_tutorial.ipynb  spardacus_tutorial.ipynb
use_case/notebooks/cifar10/results/: metrics_test.json
use_case/notebooks/mnist/: doctor_tutorial.ipynb  mahalanobis_tutorial.ipynb  msp_tutorial.ipynb  spardacus_tutorial.ipynb
use_case/src/data/: keras_mnist_datamodule.py
use_case/train_model/: main_cnn_cifar10.py  main_mlp_mnist.py
